UI fixes 69 (#8726)
* UX improves: error message

- Add “copy” button
- Show scrollbar

* fix: scrollbar z-index on the file view

* info message fix: align styles to figma

* update info-message style fro non important text

* style fixes: InfoMessage

* update styles: AI settings

Design synced with figma — https://www.figma.com/design/ShIiR6hI5dzH7sT5L03Jg1/App-Design-3.0?node-id=4529-115118&t=UowxJGDmWodp09eB-1

--- a/packages/ui/src/styles/utility/helpers.css
+++ b/packages/ui/src/styles/utility/helpers.css
@@ -35,6 +35,10 @@ pre {
 	&::-webkit-scrollbar-button {
 		display: none;
 	}
+
+	&::-webkit-scrollbar-corner {
+		background-color: transparent;
+	}
 }
 
 .stack-v {
